--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,9 +6,7 @@
 		"build": "vite build && npm run prepack",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"prepack": "svelte-kit sync && svelte-package && publint",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"prepack": "svelte-kit sync && svelte-package && publint"
 	},
 	"files": [
 		"dist",
@@ -40,9 +38,8 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"publint": "^0.3.2",
 		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
+		"typescript": "^5.3.2",
 		"vite": "^6.2.6",
 		"vite-plugin-devtools-json": "^0.2.0"
 	},
